--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5"
+        "php": ">=5.5",
+        "vlucas/phpdotenv": "^2.4"
     },
     "autoload": {
         "psr-4": {
